fix the renderIncidentISPSelector function so that it doesnt break the dropdown

--- a/src/containers/LocationPage/LocationPage.scss
+++ b/src/containers/LocationPage/LocationPage.scss
@@ -20,22 +20,19 @@
 
   .isp-select-div {
     display: inline;
-    margin-left: 25px;
     max-width: 1000px;
     min-width: 250px;
   }
 
   .show-incident {
     background-color: rgb(245, 80, 26);
-    border-radius: 8px;
-    box-shadow: 0px 8px 15px rgba(185, 63, 22, 0.4);
-    transition: all 0.3s ease 0s;
+    border-radius: 6px;
     outline: none;
     border: none;
-    font-size: 20px;
     color: #FFF;
-    padding: 6px 12px 6px 6px;
-    display: inline;
+    padding: 0px 12px;
+    display: inline-block;
+    float: right;
   }
 
   .upper-row {
